--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.7",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
